<resources>
    <string name="app_name">Bir Bilsen</string>
    <string name="settings">Ayarlar</string>
    <string name="points">Puan Tablosu</string>
    <string name="play">Oyna</string>
    <string name="share">Arkadaşlarınla Paylaş</string>
    <string name="point">Bizi Puanla</string>
    <string name="remove_ads">Reklamı Kaldır</string>
    <string name="voice">Ses</string>
    <string name="logo_bir_bilsen">Logo Bir Bilsen</string>
    <string name="_20">20</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">Tekrar Dene</string>

</resources>