<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/md_theme_light_primary"
    android:layout_height="match_parent"
    tools:context=".screen.settings.SettingsScreen">

    <TextView
        android:id="@+id/settingsScreenTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textColor="#F8F8F8"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/settingsScreenVoice"
        android:layout_width="295dp"
        style="@style/Widget.App.Switch"
        android:layout_height="36dp"
        android:layout_marginTop="50dp"
        android:text="@string/voice"
        android:textColor="#FBFBFB"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/settingsScreenShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsScreenTxt"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/settingsScreenShare"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        android:text="@string/share"
        android:textColor="#F8F7F7"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/settingsScreenPoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsScreenVoice"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/settingsScreenPoint"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="196dp"
        android:background="#F5F5F5"
        android:text="@string/point"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsScreenShare" />

    <ImageButton
        android:id="@+id/settingsBackButton"
        android:layout_width="39dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/md_theme_light_primary"
        android:backgroundTint="@color/md_theme_light_primary"
        android:contentDescription="@string/app_name"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/settingsFragmentAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-5990820577037460/6132555626"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>